--- a/lib/gits_web/controllers/ticket_html/new.html.heex
+++ b/lib/gits_web/controllers/ticket_html/new.html.heex
@@ -1,15 +1,23 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Create ticket</h1>
+<.event_sidebar
+  back={~p"/accounts/#{@conn.params["account_id"]}/events"}
+  base={~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["event_id"]}"}
+  request_path={@conn.request_path}
+/>
+<.main>
+  <.main_header title="Creat new ticket"></.main_header>
+  <.simple_form
+    :let={f}
+    for={@form}
+    action={
+      ~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["event_id"]}/tickets"
+    }
+    method="POST"
+    class="px-4"
+  >
+    <.input type="text" label="Name" field={f[:name]} />
 
-<.simple_form
-  :let={f}
-  for={@form}
-  action={~p"/accounts/#{@account_id}/events/#{@event_id}/tickets"}
-  method="POST"
->
-  <.input type="text" label="Name" field={f[:name]} />
-  <.input type="number" label="Price" field={f[:price]} />
-
-  <div class="flex gap-6 items-center">
-    <.button>Create</.button>
-  </div>
-</.simple_form>
+    <div class="flex items-center gap-6">
+      <.button>Create ticket</.button>
+    </div>
+  </.simple_form>
+</.main>
