--- a/lib/gits_web/controllers/ticket_html/index.html.heex
+++ b/lib/gits_web/controllers/ticket_html/index.html.heex
@@ -28,6 +28,7 @@
       }
     >
       <:col :let={ticket} label="Name"><%= ticket.name %></:col>
+      <:col :let={ticket} label="Price">R <%= ticket.price %></:col>
       <:action>
         <!-- <button> -->
           <!--   <.icon name="hero-ellipsis-vertical-mini" /> -->
