--- a/lib/gits_web/controllers/ticket_html/new.html.heex
+++ b/lib/gits_web/controllers/ticket_html/new.html.heex
@@ -15,6 +15,7 @@
     class="px-4"
   >
     <.input type="text" label="Name" field={f[:name]} />
+    <.input type="number" label="Price" field={f[:price]} />
 
     <div class="flex items-center gap-6">
       <.button>Create ticket</.button>
