--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -6,7 +6,7 @@
     id={"#{event.id}"}
   >
     <img
-      src="/images/placeholder.png"
+      src={get_listing_image(event.account_id, event.id)}
       class="h-full w-full object-cover transition-transform duration-300 hover:scale-110"
     />
     <div class="absolute top-3 right-3 flex flex-col items-center rounded-lg bg-white p-3 py-2.5">
@@ -20,10 +20,12 @@
 
     <div class="absolute inset-x-3 bottom-3 space-y-2 rounded-lg bg-white p-2">
       <h3 class="line-clamp-2 text-sm font-semibold"><%= event.name %></h3>
-      <div class="flex items-center justify-between">
-        <span class="text-sm text-gray-600">Mea Culpa</span>
-        <span class="rounded bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-blue-900 dark:text-blue-300">
-          R 300
+      <div class="flex items-center justify-between gap-2">
+        <span class="truncate text-sm text-gray-600">
+          <%= get_address(event.address_place_id).name %>
+        </span>
+        <span class="shrink-0 rounded bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-blue-900 dark:text-blue-300">
+          R <%= event.minimum_ticket_price %>
         </span>
       </div>
     </div>
