--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,7 +1,7 @@
 <div class="mx-auto flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
   <.link
     :for={event <- @events}
-    navigate={~p"/events/#{event.id}"}
+    navigate={~p"/events/#{event.masked_id}"}
     class="rounded-2xl overflow-hidden w-64 aspect-[4/5] relative shrink-0"
     id={"#{event.id}"}
   >
@@ -22,7 +22,9 @@
       <h3 class="line-clamp-2 text-sm font-semibold"><%= event.name %></h3>
       <div class="flex items-center justify-between gap-2">
         <span class="truncate text-sm text-gray-600">
-          <%= get_address(event.address_place_id).name %>
+          <%= if event.address do %>
+            <%= event.address.name %>
+          <% end %>
         </span>
         <span class="shrink-0 rounded bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-blue-900 dark:text-blue-300">
           R <%= event.minimum_ticket_price %>
