--- a/lib/gits_web/live/get_tickets_live.html.heex
+++ b/lib/gits_web/live/get_tickets_live.html.heex
@@ -1,26 +1,30 @@
 <div class="space-y-4 md:space-y-8">
-  <GitsWeb.EventComponents.card event={@event}></GitsWeb.EventComponents.card>
+  <GitsWeb.EventComponents.card event={@event}>
+    <div class="opacity-30">
+      <.button>Get tickets</.button>
+    </div>
+  </GitsWeb.EventComponents.card>
   <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3 lg:gap-8">
-    <h2 class="font-medium text-lg col-span-full">Get tickets</h2>
+    <h2 class="col-span-full text-lg font-medium">Get tickets</h2>
     <div
       :for={ticket <- @tickets}
       id={"#{ticket.id}"}
-      class="border rounded-xl p-4 flex gap-4 items-center"
+      class="flex items-center gap-4 rounded-xl border p-4"
     >
       <span class="grow font-medium"><%= ticket.name %></span>
       <span class="text-gray-500">R <%= ticket.price %></span>
-      <div class="flex items-center bg-gray-200 rounded-md">
+      <div class="flex items-center rounded-md bg-gray-200">
         <button
-          class="p-2 flex bg-gray-200 rounded-md"
+          class="flex rounded-md bg-gray-200 p-2"
           phx-click={JS.push("remove_ticket", value: %{id: ticket.id})}
         >
           <.icon name="hero-minus-mini" />
         </button>
-        <span class="w-8 text-center tabular-nums bg-gray-200">
-          <%= ticket.aggregates.quantity %>
+        <span class="w-8 bg-gray-200 text-center tabular-nums">
+          0
         </span>
         <button
-          class="p-2 flex bg-gray-200 rounded-md"
+          class="flex rounded-md bg-gray-200 p-2"
           phx-click={JS.push("add_ticket", value: %{id: ticket.id})}
         >
           <.icon name="hero-plus-mini" />
