add state machine and redesign home page

--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -75,9 +75,12 @@
 <footer class="bg-white">
   <div class="mx-auto max-w-7xl space-y-10 overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
     <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
-      <div :if={false} class="pb-6">
-        <a href="#" class="text-sm leading-6 text-gray-600 hover:text-gray-900">About</a>
+      <div class="pb-6">
+        <a href="/tickets" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
+          Tickets
+        </a>
       </div>
+
       <div class="pb-6">
         <a href="/organizers" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
           Organizers
