--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,35 +1,69 @@
-<div class="mx-auto flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
-  <.link
-    :for={event <- @events}
-    navigate={~p"/events/#{event.masked_id}"}
-    class="rounded-2xl overflow-hidden w-64 aspect-[4/5] relative shrink-0"
-    id={"#{event.id}"}
-  >
-    <img
-      src={get_listing_image(event.account_id, event.id)}
-      class="h-full w-full object-cover transition-transform duration-300 hover:scale-110"
-    />
-    <div class="absolute top-3 right-3 flex flex-col items-center rounded-lg bg-white p-3 py-2.5">
-      <span class="text-lg font-bold tabular-nums leading-4 text-gray-800">
-        <%= event.starts_at |> Timex.format!("%d", :strftime) %>
-      </span>
-      <span class="text-xs leading-4 text-gray-600">
-        <%= event.starts_at |> Timex.format!("%b", :strftime) %>
-      </span>
-    </div>
+<div class="flex min-h-screen items-center">
+  <div class="flex grow flex-col justify-center gap-6 px-6 lg:px-8">
+    <h1 class="text-3xl font-black italic tracking-tight">GiTS</h1>
+    <h2 class="text-xl font-medium tracking-tight text-gray-900">
+      Easy events, affordable tickets.
+    </h2>
+    <div class="pt-20">
+      <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
+        <.link
+          :for={event <- @events}
+          navigate={~p"/events/#{event.masked_id}"}
+          class="rounded-2xl overflow-hidden w-64 aspect-[4/5] relative shrink-0"
+          id={"#{event.id}"}
+        >
+          <img
+            src={get_listing_image(event.account_id, event.id)}
+            class="h-full w-full object-cover transition-transform duration-300 hover:scale-110"
+          />
+          <div class="absolute top-3 right-3 flex flex-col items-center rounded-lg bg-white p-3 py-2.5">
+            <span class="text-lg font-bold tabular-nums leading-4 text-gray-800">
+              <%= event.starts_at |> Timex.format!("%d", :strftime) %>
+            </span>
+            <span class="text-xs leading-4 text-gray-600">
+              <%= event.starts_at |> Timex.format!("%b", :strftime) %>
+            </span>
+          </div>
 
-    <div class="absolute inset-x-3 bottom-3 space-y-2 rounded-lg bg-white p-2">
-      <h3 class="line-clamp-2 text-sm font-semibold"><%= event.name %></h3>
-      <div class="flex items-center justify-between gap-2">
-        <span class="truncate text-sm text-gray-600">
-          <%= if event.address do %>
-            <%= event.address.name %>
-          <% end %>
-        </span>
-        <span class="shrink-0 rounded bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-blue-900 dark:text-blue-300">
-          R <%= event.minimum_ticket_price %>
-        </span>
+          <div class="absolute inset-x-3 bottom-3 space-y-2 rounded-lg bg-white p-2">
+            <h3 class="line-clamp-2 text-sm font-semibold"><%= event.name %></h3>
+            <div class="flex items-center justify-between gap-2">
+              <span class="truncate text-sm text-gray-600">
+                <%= if event.address do %>
+                  <%= event.address.name %>
+                <% end %>
+              </span>
+              <span class="shrink-0 rounded bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-blue-900 dark:text-blue-300">
+                <%= if event.minimum_ticket_price > 0 do %>
+                  R <%= event.minimum_ticket_price %>
+                <% else %>
+                  FREE
+                <% end %>
+              </span>
+            </div>
+          </div>
+        </.link>
       </div>
     </div>
-  </.link>
+  </div>
 </div>
+<footer class="bg-white">
+  <div class="mx-auto max-w-7xl space-y-10 overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
+    <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
+      <div class="pb-6">
+        <a href="/tickets" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
+          Tickets
+        </a>
+      </div>
+
+      <div class="pb-6">
+        <a href="/organizers" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
+          Organizers
+        </a>
+      </div>
+    </nav>
+    <p class="text-center text-xs leading-5 text-gray-500">
+      &copy; 2024
+    </p>
+  </div>
+</footer>
