use multiple states for ticket

--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -39,6 +39,9 @@
                 <% else %>
                   FREE
                 <% end %>
+                <%= if event.ticket_price_varies do %>
+                  &plus;
+                <% end %>
               </span>
             </div>
           </div>
