--- a/lib/gits_web/controllers/event_html/settings.html.heex
+++ b/lib/gits_web/controllers/event_html/settings.html.heex
@@ -148,7 +148,7 @@
     </div>
   </div>
 
-  <div class="px-4">
+  <div :if={false} class="px-4">
     <div class="rounded-2xl border p-4">
       <div class="flex items-center justify-between">
         <h2 class="font-poppins text-2xl">Danger zone</h2>
