--- a/lib/gits_web/controllers/page_html/organizers.html.heex
+++ b/lib/gits_web/controllers/page_html/organizers.html.heex
@@ -5,7 +5,7 @@
     </div>
 
     <h2 class="text-xl font-medium tracking-tight text-gray-900">
-      Host your first event with us.
+      Host your event with us.
     </h2>
 
     <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
