--- a/lib/gits_web/controllers/page_html/tickets.html.heex
+++ b/lib/gits_web/controllers/page_html/tickets.html.heex
@@ -1,5 +1,39 @@
 <%= if @customer == nil or @customer.scannable_instances == [] do %>
-  <div>Buy one or two tickets, they'll show up here</div>
+  <div class="flex h-screen items-center">
+    <div class="flex grow flex-col justify-center gap-6 px-6 lg:px-8">
+      <div>
+        <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
+      </div>
+
+      <h2 class="text-xl font-medium tracking-tight text-gray-900">
+        This is where the magic happens!<br />
+        Of course, after you've gotten a ticket from one of our organisers
+      </h2>
+    </div>
+  </div>
+  <footer class="bg-white">
+    <div class="mx-auto max-w-7xl space-y-10 overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
+      <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
+        <div :if={false} class="pb-6">
+          <a href="#" class="text-sm leading-6 text-gray-600 hover:text-gray-900">About</a>
+        </div>
+        <div class="pb-6">
+          <a href="/tickets" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
+            Tickets
+          </a>
+        </div>
+
+        <div class="pb-6">
+          <a href="/organizers" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
+            Organizers
+          </a>
+        </div>
+      </nav>
+      <p class="text-center text-xs leading-5 text-gray-500">
+        &copy; 2024
+      </p>
+    </div>
+  </footer>
 <% else %>
   <div class=""></div>
   <div class="flex gap-8">
